--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\elmag\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
+user.properties.file=C:\\Users\\Kross\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
